# WebSocket-Client

./: .gn  BUILD.gn  README.md
build_files/config/: BUILD.gn  BUILDCONFIG.gn
build_files/toolchain/: BUILD.gn
src/: BUILD.gn  ChatInterface.cpp  ChatInterface.h  WebSocketClient.cpp  WebSocketClient.h  main.cpp
test/: BUILD.gn  WebSocketClient_test.cpp
